2005-12-09  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp, Eris/View.cpp, Eris/Timeout.cpp, Eris/Lobby.cpp: 
      replace many occurences of foo.count(x) followed by foo[x] with
      iterator = foo.find(x), which is half the work.

2005-12-01  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: don't assert if sight(create) is received after an
      entity is already in the View: just log a warning and emit the signal.
      
2005-12-01  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: unregister a moving entity from the View upon deletion;
      should fix a crash reported by Al.
      
2005-11-28  James Turner  <james@worldforge.org>

    * Eris/Account.cpp: delete all remaining active avatars when destructing
      an account.

2005-11-19  James Turner  <james@worldforge.org>

	* Eris/Type.h, Eris/Type.cpp: add a helper method to perform the copy/merge
	  behaviour choosen for combining incoming values in SET operations with
	  the existing data.
	  
	* Eris/Entity.cpp: use the new copy/merge function to set attribute state.
	  This should permit incremental updating of large attributes, eg 'terrain',
	  from the server.

	* Eris/View.cpp: make an assert more specific; avoid a failure if the View
	  is deleted before the top-level entity is registered.
	  
	* Eris/Account.cpp: don't log warning messages for server-side errors to the
	  console - just pass them up to the client.
	  
	* test/agent.cpp, test/agent.h: work-in-progress code towards spamming the
	  the test-harness with a large number of ops.
	  
2005-10-25  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.9, Interface version 9.

2005-10-25  Al Riddoch  <alriddoch@zepler.org>

	* test/Makefile.am: Re-enable running tests, as they now seem to
	  complete.

2005-10-23  James Turner  <james@worldforge.org>

	* configure.ac: update version number for 1.3.9 release

2005-10-23  James Turner  <james@worldforge.org>

	* test/tests.cpp: add a test for entity processing